--- a/scavExplorer/Base.lproj/Main.storyboard
+++ b/scavExplorer/Base.lproj/Main.storyboard
@@ -191,22 +191,12 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="gSE-jp-QDj">
-                                <rect key="frame" x="40" y="600" width="334" height="168"/>
+                                <rect key="frame" x="40" y="664" width="334" height="104"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="miV-LJ-1cm">
-                                        <rect key="frame" x="0.0" y="0.0" width="334" height="44"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
-                                        <state key="normal" title="View Events">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="viewEventsTapped:" destination="OeW-d8-9nv" eventType="touchUpInside" id="8nU-XG-3mk"/>
-                                        </connections>
-                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p8C-za-q7u">
-                                        <rect key="frame" x="0.0" y="64" width="334" height="42"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="334" height="42"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
-                                        <state key="normal" title="Go to Camera">
+                                        <state key="normal" title="View Events">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
@@ -214,7 +204,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NU7-kh-gRH">
-                                        <rect key="frame" x="0.0" y="126" width="334" height="42"/>
+                                        <rect key="frame" x="0.0" y="62" width="334" height="42"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                         <state key="normal" title="Log out">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -240,7 +230,6 @@
                     <navigationItem key="navigationItem" id="kb5-4b-a4n"/>
                     <connections>
                         <outlet property="logoutButton" destination="NU7-kh-gRH" id="1Av-IH-4xf"/>
-                        <outlet property="viewEventsButton" destination="miV-LJ-1cm" id="V2g-83-svI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Azp-gq-ZBr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -402,6 +391,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="ap0-t4-xJL"/>
         <segue reference="97S-us-k0b"/>
         <segue reference="fCp-dS-3Js"/>
     </inferredMetricsTieBreakers>
